--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,8 @@
             "name": "Launch and Debug Standalone Blazor WebAssembly App",
             "type": "blazorwasm",
             "request": "launch",
-            "cwd": "${workspaceFolder}/TimePicker"
+            "cwd": "${workspaceFolder}/TimePicker",
+            "url": "http://localhost:5158"
         }
     ]
 }
